weilifly_index_download_20:47

--- a/weilifly_web/WebRoot/css/site.css
+++ b/weilifly_web/WebRoot/css/site.css
@@ -238,12 +238,12 @@ padding:0 0 0 20px;}
 .m-zjbg .page-area td{ padding:40px 0;}
 
 /*下载帮助*/
-.left-box{ border:1px solid #e1e1e1; width:718px; float:left; }
+.left-box{ border:1px solid #36648B; width:718px; float:left; }
 .left-box-1{ border:none;}
 .right-box{width:270px;float:right;}
 .m-s-ban{ height:49px; line-height:49px; padding:0 0 0 20px; border-bottom:1px solid #e1e1e1; color:#464646; font-family:"微软雅黑"; font-size:18px;
 background:#f7f7f7;}
-.m-s-ban-1{ border:1px solid #e1e1e1; margin-top:11px;}
+.m-s-ban-1{ border:1px solid #e1e1e1; margin-top:0px;}
 .m-s-ban a{ width:51px; height:14px; display:block; background:url(../images/more+.png); float:right; text-indent:-99999px; margin:21px 11px 0 0;}
 .n-s-nav{ height:43px; border-bottom:1px solid #e1e1e1; position:relative;}
 .n-s-nav1{ height:43px; border-bottom:1px solid #e1e1e1; position:relative;}
@@ -359,13 +359,21 @@ margin:-35px 0 0 -35px; z-index:10; text-indent:-99999px;}
 /*下载综合*/
 
 
-.m-s-ban1{ height:49px; line-height:49px; padding:0 0 0 20px; border:1px solid #e1e1e1; color:#464646; font-family:"微软雅黑"; font-size:18px;
-background:#f7f7f7;}
+.m-s-ban1{ 
+	height:49px;
+	line-height:49px;
+	padding:0 0 0 20px;
+	border:1px solid #e1e1e1;
+	color:#464646;
+	font-family:"微软雅黑";
+	font-size:18px;
+	background:#f7f7f7;
+}
 
 .hover-a{display:inline-block;height:26px;line-height:26px;position:relative;margin:0 0 0 40px}
 .hover-a .img{ position:absolute; top:26px;left:0;display:none;}
 .hover-a:hover .img{display:block;}
-.pic-list-s{ height:198px;border:1px solid #e1e1e1;border-bottom:3px solid #e1e1e1; position:relative;
+.pic-list-s{ height:260px;border:1px solid #e1e1e1;border-bottom:3px solid #e1e1e1; position:relative;
 padding:38px 76px 31px 76px;  overflow:hidden;}
 .pic-list-s em{ display:block; width:37px; height:37px;  position:absolute; top:111px; cursor:pointer;}
 .pic-list-s .left{ left:20px; background: url(../images/s-d-1.png);}
