--- a/weilifly_web/WebRoot/css/Common.css
+++ b/weilifly_web/WebRoot/css/Common.css
@@ -7,7 +7,7 @@ img,input,button,textarea{ border: none;}
 em,i { font-style:normal;}
 
 a{ text-decoration:none; color:#464646;}
-a:hover { color:#23ac38;}
+a:hover { color:#5CACEE;}
 :focus { outline:0;}
 h1,h2,h3,h4,h5,h6 { font-size:12px; font-weight:normal;}
 ul,li,ol { list-style:none;}
@@ -29,17 +29,17 @@ ul,li,ol { list-style:none;}
 .nav ul{ width:100%; }
 .nav ul li{ float:left;height:30px; line-height:30px;margin-right:45px; overflow:hidden;}
 .nav ul li a{ font-family:"微软雅黑"; font-size:16px; line-height:30px; color:#464646; padding:0 6px;}
-.nav ul li a:hover{ color:#23ac38;}
-.nav ul li.cur a{color:#23ac38;}
+.nav ul li a:hover{ color:#5CACEE;}
+.nav ul li.cur a{color:#5CACEE;}
 
-.sliding-block{ position:absolute; height:3px; background:#23ac38; top:56px; left:0;}
+.sliding-block{ position:absolute; height:3px; background:#5CACEE; top:56px; left:0;}
 
 
 
 .search{ width:230px; height:50px; float:right; margin:41px 1px 0 0; position:relative;}
 .search input{ width:190px; padding:4px 5px; background:#fff; border:1px solid #ededed;  border-right:1px solid #fbfbfb; color:#c3c3c3;
  vertical-align:middle; line-height:18px\9;}
-.search span{ display:inline-block; width:28px; height:26px; background:url(../images/nav-search-icon.png) no-repeat #23ac38;text-indent:-99999px; position:absolute; right:0; cursor:pointer;}
+.search span{ display:inline-block; width:28px; height:26px; background:url(../images/nav-search-icon.png) no-repeat #5CACEE;text-indent:-99999px; position:absolute; right:0; cursor:pointer;}
 
 .cp-main-box .cp-bk-box{padding:80px 0 20px 0;overflow:hidden;}
 .cp-main-box .pd50{padding:80px 50px 20px 50px}
@@ -51,17 +51,22 @@ ul,li,ol { list-style:none;}
 .main-content-1{ border:0; width:1000px;}
 .main-content-2{overflow:visible;}
 
+/*单个下载页*/
+.content1{ width:100%; min-height:100%; background:url(../images/shadow-line.gif) repeat-x #fff; padding:39px 0 70px 0; margin-top:101px; }
+.main-content1,.main-contents{ margin:0 auto; width:998px;overflow:hidden; min-height:100%; background:#fff; *margin-top:140px;}
+.main-content1{border:1px solid #e1e1e1;}
+
 /*全局翻页*/
 .page{ height:30px; text-align:center;}
 .page a{ display:inline-block;width:34px; height:30px; line-height:30px; text-align:center; color:#666; /*margin-left:4px; */ 
 background:url(../images/y-bg.png) no-repeat;}
 .page a:hover{ text-decoration:none;}
 .page .sm-y{ width:50px; background:url(../images/sm-y.png);  }
-.page .sx-y{ width:48px; background:url(../images/s-y.png);text-align: left; padding-left:22px; }
-.page .x-y{ width:62px; background:url(../images/x-y.png); text-align:left; padding:0 0 0 8px;}
+.page .sx-y{ width:65px; background:url(../images/s-y.png);text-align: left; padding-left:22px; }
+.page .x-y{ width:65px; background:url(../images/x-y.png); text-align:left; padding:0 0 0 8px;}
 .page a.num:hover{color:#fff; background:url(../images/y-cur.png);}
 .page a.cur{ color:#fff; background:url(../images/y-cur.png);}
-.page .sm-y:hover,.page .sx-y:hover,.page .x-y:hover{ color:#23ac38;}
+.page .sm-y:hover,.page .sx-y:hover,.page .x-y:hover{ color:#5CACEE;}
 
 
 
@@ -74,7 +79,7 @@ position:absolute; bottom:-34px; left:50%; margin-left:-21px; cursor:pointer; z-
 
 /*首页第二块锚点*/
 .rotate-box{ width:100%; /*height:650px;*/ background:#f3f3f3; position:relative;
- border-top:1px solid #23ac38; padding:101px 0 46px 0; overflow:hidden;}
+ border-top:1px solid #5CACEE; padding:101px 0 46px 0; overflow:hidden;}
 .main-cc{ width:1000px; margin:0 auto; height:490px;}
 
 /*3D滚动*/
@@ -112,14 +117,14 @@ border-top:1px solid #fcfcfc; border-radius:2px; float:left;}
 .zx-box .inner{ width:256px; padding:18px 18px 13px 18px;  background: url(../images/index-shadow0.png) repeat-y;}
 .zx-box h3{ height:22px; line-height:22px; padding:0 0 8px 0; border-bottom:1px solid #e3e3e3;}
 .zx-box h3 a{ float:right; display:block; width:51px; height:14px; background:url(../images/more+.png); text-indent:-99999px; margin:8px 0 0 0;}
-.zx-box h3 span{ color:#333;padding:0 0 8px 0; font-family:"微软雅黑"; font-size:22px; display:inline-block; border-bottom:1px solid #23ac38;}
+.zx-box h3 span{ color:#333;padding:0 0 8px 0; font-family:"微软雅黑"; font-size:22px; display:inline-block; border-bottom:1px solid #5CACEE;}
 .zx-list{ margin:17px 0 0 0; overflow:hidden; background:#f9f9f9;}
 .zx-list dt{ width:78px; height:78px; float:left;}
 .zx-list dt a{ display:block;}
 .zx-list dt img{ width:78px; height:78px;}
 .zx-list dd{ margin-left:94px;}
 .zx-list dd a.title{ font-size:14px; color:#464646; font-family:"微软雅黑"; line-height:20px; display:inline-block; margin:10px 0 0 0;}
-.zx-list dd a.title:hover{ color:#23ac38;}
+.zx-list dd a.title:hover{ color:#5CACEE;}
 .zx-list dd a.btn{ width:49px; height:14px; display:block; background:url(../images/more.png); margin:5px 0 0 0; }
 
 
@@ -129,15 +134,15 @@ border-top:1px solid #fcfcfc; border-radius:2px; float:left;}
 .rd-box ul{  margin:11px 0 0 0;}
 .rd-box li{ height:28px; line-height:28px;}
 .rd-box li .name{ color:#464646; font-size:14px; font-family:"微软雅黑"; padding:0 0 0 10px; background:url(../images/arrows666.png) left center no-repeat;}
-.rd-box li .name:hover{ color:#23ac38; text-decoration:underline;}
+.rd-box li .name:hover{ color:#5CACEE; text-decoration:underline;}
 .rd-box li .time{ float:right; font-size:12px; font-family:Arial;color:#464646; }
-.rd-box li .time:hover{ color:#23ac38; text-decoration:underline;}
+.rd-box li .time:hover{ color:#5CACEE; text-decoration:underline;}
 
 
 .sp-box{ width:366px; padding:0 0 5px 0; overflow:hidden; background:url(../images/index-shadow1-366.png.png) bottom no-repeat;border-top:1px solid #fcfcfc; border-radius:2px; float:left; margin-left:25px;}
 .sp-box h3{ color:#333; font-size:22px; font-family:"微软雅黑"; height:22px; padding:0 0 8px 0; line-height:22px;}
 .sp-box h3 a{ float:right; display:block; width:51px; height:14px; background:url(../images/more+.png); text-indent:-99999px; margin:8px 0 0 0;}
-.sp-box h3 span{ color:#333;padding:0 0 8px 0; font-family:"微软雅黑"; font-size:22px; display:inline-block; border-bottom:1px solid #23ac38;}
+.sp-box h3 span{ color:#333;padding:0 0 8px 0; font-family:"微软雅黑"; font-size:22px; display:inline-block; border-bottom:1px solid #5CACEE;}
 
 
 .sp-box .inner{width:330x; padding:18px 24px 18px 23px;  background:url(../images/index-shadow0-366.png) repeat-y;}
@@ -148,7 +153,7 @@ border-top:1px solid #fcfcfc; border-radius:2px; float:left;}
 .nx-box{ width:581px; padding:0 0 5px 0; overflow:hidden; background:url(../images/index-shadow1-584.png) bottom no-repeat;border-top:1px solid #fcfcfc; border-radius:2px; float:left; margin-left:25px;}
 .nx-box h3{ color:#333; font-size:22px; font-family:"微软雅黑"; height:22px; padding:0 0 8px 0; line-height:22px;}
 .nx-box h3 a{ float:right; display:block; width:51px; height:14px; background:url(../images/more+.png); text-indent:-99999px; margin:8px 0 0 0;}
-.nx-box h3 span{ color:#333;padding:0 0 8px 0; font-family:"微软雅黑"; font-size:22px; display:inline-block; border-bottom:1px solid #23ac38;}
+.nx-box h3 span{ color:#333;padding:0 0 8px 0; font-family:"微软雅黑"; font-size:22px; display:inline-block; border-bottom:1px solid #5CACEE;}
 
 
 .nx-box .inner{width:660x; padding:18px 24px 18px 23px;  background:url(../images/index-shadow1-584.png) repeat-y;}
@@ -159,13 +164,13 @@ border-top:1px solid #fcfcfc; border-radius:2px; float:left;}
 
 
 /*公共底部*/
-.footer-box{ width:100%; height:283px; background:#23ac38; position:relative; }
+.footer-box{ width:100%; height:283px; background:#40454b; position:relative; }
 .footer{ width:1000px;margin:0 auto; }
 
 .nav-bottom{ width:190px; float:left; margin:39px 0 0 0;}
 .nav-bottom h3{font-size:16px; color:#fff;font-family:"微软雅黑"; line-height:30px;}
 .nav-bottom li { position:relative;}
-.nav-bottom li a{font-size:14px;color:#aaf3b5; line-height:28px; font-family:"微软雅黑";padding:0 0 0 15px; background: url(../images/bottom-a-bg.png) no-repeat left center;}
+.nav-bottom li a{font-size:14px;color:#fff; line-height:28px; font-family:"微软雅黑";padding:0 0 0 15px; background: url(../images/bottom-a-bg.png) no-repeat left center;}
 .nav-bottom li a:hover{ text-decoration:underline;}
 .nav-bottom li a.wx{ background:url(../images/foot-icon.png) no-repeat 0 2px; padding:0 0 2px 29px; }
 .nav-bottom li a.xlwb{ background:url(../images/foot-icon0.png) no-repeat 0 2px ; padding:0 0 2px 29px; }
@@ -180,10 +185,10 @@ border-top:1px solid #fcfcfc; border-radius:2px; float:left;}
  text-indent:-99999px; float: left; }
 .nav-bottom .qq div{ font-size:18px; float:left;color:#fff; font-family:"微软雅黑";}
 .nav-bottom .qq span{ display:block; font-size:14px;}
-.footer-box .bottom{ width:100%; height:47px; line-height:47px; border-top:1px solid #1a9c2e; color:#aaf3b5; 
+.footer-box .bottom{ width:100%; height:47px; line-height:47px; border-top:1px solid #1a9c2e; color:#fff; 
 text-align:center; position:absolute; left:0; bottom:0;}
 .footer-box .bottom span{ padding:0 10px;}
-.footer-box .bottom a{padding:0 10px; color:#aaf3b5; }
+.footer-box .bottom a{padding:0 10px; color:#fff; }
 .footer-box .bottom a:hover{ text-decoration:underline;}
 .nav-bottom .dianhua a{ background: url(../images/b-pnone-bg.png) no-repeat 0 4px; }  
 .nav-bottom .dianhua span{ margin-top:-10px;}
@@ -224,7 +229,7 @@ opacity: 0.5;}
 
 
 .ck-all{ text-align:right; height:20px; overflow:hidden;} 
-.ck-all a{ color:#23ac38; display:inline-block; padding:0 17px 0 0; background:url(../images/ck-all.png) no-repeat right 1px; 
+.ck-all a{ color:#5CACEE; display:inline-block; padding:0 17px 0 0; background:url(../images/ck-all.png) no-repeat right 1px; 
 height:20px;}
 
 .spjs{color: #464646;line-height: 28px;height: 77px;overflow: hidden;padding-top: 20px;font-size:14px;font-family: "微软雅黑"}
